[gd_scene load_steps=36 format=3 uid="uid://q1jxj01w08oq"]

[ext_resource type="Script" path="res://systems/adventurer_system/animated_sprite_2d.gd" id="1_imomm"]
[ext_resource type="Script" path="res://scenes/characters/adventurer/adventurer.gd" id="1_k3kjk"]
[ext_resource type="Texture2D" uid="uid://cn53uads4bci0" path="res://resources/textures/adventurer_spritesheets/character_001.png" id="2_a67wa"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_ltfms"]
[ext_resource type="Script" path="res://systems/task_system/current_tasks.gd" id="4_5x25t"]
[ext_resource type="Texture2D" uid="uid://bm4qwa2l1e5n2" path="res://resources/textures/adventurer_spritesheets/Character_011.png" id="4_26ufd"]
[ext_resource type="PackedScene" uid="uid://calcpqgx4m6pj" path="res://scenes/components/npc_movement/npc_movement_component.tscn" id="4_ebekr"]
[ext_resource type="FontFile" uid="uid://5dmksnqi7msu" path="res://assets/fonts/Abaddon Light.ttf" id="4_ty7al"]
[ext_resource type="Script" path="res://scenes/components/npc_movement/npc_movement_component.gd" id="5_5gn7x"]
[ext_resource type="Script" path="res://systems/task_system/tasks/harvest_resource.gd" id="5_hn3wl"]
[ext_resource type="Script" path="res://scripts/state_machine/states/adventurer_states/adventurer_idle.gd" id="5_q5pqt"]
[ext_resource type="Script" path="res://scripts/state_machine/states/adventurer_states/adventurer_roaming.gd" id="6_6b8hr"]
[ext_resource type="PackedScene" uid="uid://ckklowqcnd3tm" path="res://scenes/components/npc_animation/npc_animation_component.tscn" id="6_fw7qb"]
[ext_resource type="Script" path="res://scripts/state_machine/states/adventurer_states/perform_task.gd" id="7_1omw2"]
[ext_resource type="Script" path="res://scenes/components/npc_animation/npc_animation_component.gd" id="7_7ybgr"]
[ext_resource type="Script" path="res://scenes/characters/adventurer/chat_label.gd" id="8_5ktfj"]
[ext_resource type="FontFile" uid="uid://btms2kimeagl3" path="res://assets/fonts/Abaddon Bold.ttf" id="8_ymgy1"]
[ext_resource type="Script" path="res://scripts/state_machine/states/adventurer_states/aquire_task.gd" id="9_8j8a2"]
[ext_resource type="Script" path="res://scripts/state_machine/states/adventurer_states/afk.gd" id="9_be1el"]
[ext_resource type="PackedScene" uid="uid://bl71s24qqb7u2" path="res://systems/task_system/subtasks/get_harvestable_node.tscn" id="11_c8nm3"]
[ext_resource type="PackedScene" uid="uid://bcmif43w5l480" path="res://systems/task_system/subtasks/get_adjacent_tile_gp.tscn" id="12_n8usv"]
[ext_resource type="PackedScene" uid="uid://d2iewrw2hcm4n" path="res://systems/task_system/subtasks/set_path_to_target_gp.tscn" id="13_m8vlf"]
[ext_resource type="PackedScene" uid="uid://u7xi1nkbk70c" path="res://systems/task_system/subtasks/traverse_path.tscn" id="14_e1kjb"]
[ext_resource type="PackedScene" uid="uid://dppekferca52p" path="res://systems/task_system/subtasks/face_target_node.tscn" id="15_ljhnc"]
[ext_resource type="PackedScene" uid="uid://br74naia5kk5n" path="res://systems/task_system/subtasks/harvest_node.tscn" id="16_ed86t"]
[ext_resource type="PackedScene" uid="uid://d3mvx55gh5nm6" path="res://systems/task_system/subtasks/set_path_to_pickup.tscn" id="17_xfatm"]
[ext_resource type="PackedScene" uid="uid://dhh1v7oxrkcsf" path="res://systems/task_system/subtasks/grab_pickup.tscn" id="18_hlroi"]
[ext_resource type="Script" path="res://testchat.gd" id="23_rgxd1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_njwo6"]
radius = 5.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lqsj0"]
atlas = ExtResource("2_a67wa")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v172m"]
atlas = ExtResource("2_a67wa")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnbvi"]
atlas = ExtResource("2_a67wa")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4avp"]
atlas = ExtResource("2_a67wa")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2g47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqsj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v172m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnbvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4avp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yqt4t"]
radius = 3.0

[node name="Adventurer" type="CharacterBody2D" node_paths=PackedStringArray("animated_sprite")]
z_index = 2
y_sort_enabled = true
collision_layer = 4
motion_mode = 1
script = ExtResource("1_k3kjk")
animated_sprite = NodePath("AnimatedSprite2D")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_njwo6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_w2g47")
script = ExtResource("1_imomm")
character_spritesheet_texture = ExtResource("4_26ufd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_yqt4t")

[node name="NPCMovementComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("4_ebekr")]
script = ExtResource("5_5gn7x")
parent = NodePath("..")
max_speed = 120.0

[node name="NPCAnimationComponent" parent="." node_paths=PackedStringArray("animated_sprite") instance=ExtResource("6_fw7qb")]
script = ExtResource("7_7ybgr")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 3.0
path_postprocessing = 1
debug_enabled = true

[node name="CurrentTasks" type="Node" parent="."]
script = ExtResource("4_5x25t")

[node name="HarvestResource" type="Node" parent="CurrentTasks"]
script = ExtResource("5_hn3wl")
harvestable_type = "tree"
iterations = 5

[node name="SubtaskTimer" type="Timer" parent="CurrentTasks/HarvestResource"]
one_shot = true

[node name="RetryTimer" type="Timer" parent="CurrentTasks/HarvestResource"]
one_shot = true

[node name="GetHarvestableNode" parent="CurrentTasks/HarvestResource" instance=ExtResource("11_c8nm3")]
max_retries = 5

[node name="GetAdjacentTileGP" parent="CurrentTasks/HarvestResource" instance=ExtResource("12_n8usv")]

[node name="SetPathToTargetGP" parent="CurrentTasks/HarvestResource" instance=ExtResource("13_m8vlf")]

[node name="TraversePath" parent="CurrentTasks/HarvestResource" instance=ExtResource("14_e1kjb")]

[node name="FaceTargetNode" parent="CurrentTasks/HarvestResource" instance=ExtResource("15_ljhnc")]

[node name="HarvestNode" parent="CurrentTasks/HarvestResource" instance=ExtResource("16_ed86t")]

[node name="SetPathToPickup" parent="CurrentTasks/HarvestResource" instance=ExtResource("17_xfatm")]
input_var_name = "pickup_node"

[node name="GrabPickup" parent="CurrentTasks/HarvestResource" instance=ExtResource("18_hlroi")]
input_var_name = "pickup_node"

[node name="HarvestResource2" type="Node" parent="CurrentTasks"]
script = ExtResource("5_hn3wl")
harvestable_type = "rock"
iterations = 5

[node name="SubtaskTimer" type="Timer" parent="CurrentTasks/HarvestResource2"]
one_shot = true

[node name="RetryTimer" type="Timer" parent="CurrentTasks/HarvestResource2"]
one_shot = true

[node name="GetHarvestableNode" parent="CurrentTasks/HarvestResource2" instance=ExtResource("11_c8nm3")]
max_retries = 5

[node name="GetAdjacentTileGP" parent="CurrentTasks/HarvestResource2" instance=ExtResource("12_n8usv")]

[node name="SetPathToTargetGP" parent="CurrentTasks/HarvestResource2" instance=ExtResource("13_m8vlf")]

[node name="TraversePath" parent="CurrentTasks/HarvestResource2" instance=ExtResource("14_e1kjb")]

[node name="FaceTargetNode" parent="CurrentTasks/HarvestResource2" instance=ExtResource("15_ljhnc")]

[node name="HarvestNode" parent="CurrentTasks/HarvestResource2" instance=ExtResource("16_ed86t")]

[node name="SetPathToPickup" parent="CurrentTasks/HarvestResource2" instance=ExtResource("17_xfatm")]
input_var_name = "pickup_node"

[node name="GrabPickup" parent="CurrentTasks/HarvestResource2" instance=ExtResource("18_hlroi")]
input_var_name = "pickup_node"

[node name="HarvestResource3" type="Node" parent="CurrentTasks"]
script = ExtResource("5_hn3wl")
harvestable_type = "tree"
iterations = 5

[node name="SubtaskTimer" type="Timer" parent="CurrentTasks/HarvestResource3"]
one_shot = true

[node name="RetryTimer" type="Timer" parent="CurrentTasks/HarvestResource3"]
one_shot = true

[node name="GetHarvestableNode" parent="CurrentTasks/HarvestResource3" instance=ExtResource("11_c8nm3")]
max_retries = 5

[node name="GetAdjacentTileGP" parent="CurrentTasks/HarvestResource3" instance=ExtResource("12_n8usv")]

[node name="SetPathToTargetGP" parent="CurrentTasks/HarvestResource3" instance=ExtResource("13_m8vlf")]

[node name="TraversePath" parent="CurrentTasks/HarvestResource3" instance=ExtResource("14_e1kjb")]

[node name="FaceTargetNode" parent="CurrentTasks/HarvestResource3" instance=ExtResource("15_ljhnc")]

[node name="HarvestNode" parent="CurrentTasks/HarvestResource3" instance=ExtResource("16_ed86t")]

[node name="SetPathToPickup" parent="CurrentTasks/HarvestResource3" instance=ExtResource("17_xfatm")]
input_var_name = "pickup_node"

[node name="GrabPickup" parent="CurrentTasks/HarvestResource3" instance=ExtResource("18_hlroi")]
input_var_name = "pickup_node"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("2_ltfms")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "animated_sprite_2d")]
script = ExtResource("5_q5pqt")
idle_time_range_sec = Vector2(1, 5)
parent = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Roaming" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "animated_sprite_2d")]
script = ExtResource("6_6b8hr")
parent = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="RoamingTimer" type="Timer" parent="StateMachine/Roaming"]
one_shot = true

[node name="PerformTask" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "animated_sprite_2d", "current_tasks")]
script = ExtResource("7_1omw2")
parent = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
current_tasks = NodePath("../../CurrentTasks")

[node name="AquireTask" type="Node" parent="StateMachine"]
script = ExtResource("9_8j8a2")

[node name="AFK" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "animated_sprite_2d", "name_label")]
script = ExtResource("9_be1el")
parent = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
name_label = NodePath("../../NameLabel")

[node name="AFKTimer" type="Timer" parent="StateMachine/AFK"]
one_shot = true

[node name="TESTCHAT" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent", "animated_sprite_2d", "chat_label")]
script = ExtResource("23_rgxd1")
parent = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
chat_label = NodePath("../../ChatLabel")

[node name="ChatCooldown" type="Timer" parent="StateMachine/TESTCHAT"]
one_shot = true

[node name="NameLabel" type="Label" parent="."]
offset_left = -64.0
offset_top = 3.0
offset_right = 65.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.150118, 0.492927, 0.831924, 1)
theme_override_fonts/font = ExtResource("4_ty7al")
theme_override_font_sizes/font_size = 8
text = "<xXSepirophxX420>"
horizontal_alignment = 1

[node name="DebugCurrentState" type="Label" parent="."]
offset_left = -64.0
offset_top = -27.0
offset_right = 65.0
offset_bottom = -13.0
theme_override_colors/font_color = Color(0.150118, 0.492927, 0.831924, 1)
theme_override_fonts/font = ExtResource("4_ty7al")
theme_override_font_sizes/font_size = 8
text = "STATE"
horizontal_alignment = 1

[node name="ChatLabel" type="Label" parent="." node_paths=PackedStringArray("parent")]
z_index = 1
offset_left = -228.0
offset_top = -27.0
offset_right = 230.0
offset_bottom = -13.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("8_ymgy1")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
script = ExtResource("8_5ktfj")
parent = NodePath("..")

[node name="ChatTimer" type="Timer" parent="ChatLabel"]
wait_time = 5.0
one_shot = true
